This is the complete PEM project

--- a/src/app/Component/dashboard/dashboard.component.html
+++ b/src/app/Component/dashboard/dashboard.component.html
@@ -229,7 +229,7 @@
                             request_quote
                         </span>
                     </a>
-                   
+
                     <a class="nav-link" id="v-pills-policies-tab" title="Policies" data-bs-toggle="pill" href="#v-pills-policies" role="tab" aria-controls="v-pills-policies" aria-selected="false">
                         <span class="material-icons-outlined">
                             verified_user
@@ -986,3 +986,6 @@
 
     <!-- Custom JS -->
     <script src="assets/js/app.js"></script>
+        </div>
+    </div>
+</app-sidebar>
