--- a/src/app/departments/departments.component.css
+++ b/src/app/departments/departments.component.css
@@ -1,7 +1,7 @@
 input.invalid.touched,
 select.invalid.touched{
     border: 1px solid red;
-    box-shadow: inset 0 0 13 ;
+    /*box-shadow: inset 0 0 13 ;*/
 }
 
 .mat-form-field {
