--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -82,7 +82,7 @@
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchTerm" name="search" (keyup)="search($event)" >
 
-                                <button class="btn btn-outline-secondary" type="button">    
+                                <button class="btn btn-outline-secondary" type="button">
                                     <span class="material-icons-outlined">
                                         search
                                     </span>
@@ -199,13 +199,13 @@
                 <!-- <div class="dropdown-menu">
                     <a class="dropdown-item" href="profile.html">My Profile</a>
                     <a class="dropdown-item" href="settings.html">Settings</a>
-                    <a class="dropdown-item" href="login.html">Logout</a> 
+                    <a class="dropdown-item" href="login.html">Logout</a>
                 </div> -->
                 <button class=" btn btn-danger btn-sm"  (click)="onLogout()">Logout</button>
             </li>
             <!-- <li class="nav-item">
-               
-                <div> <a class="dropdown-item" (click)="onLogout()">Logout</a></div> 
+
+                <div> <a class="dropdown-item" (click)="onLogout()">Logout</a></div>
             </li> -->
         </ul>
         <!-- /Header Menu -->
@@ -515,6 +515,7 @@
                         <li><a routerLink="/bank">Bank</a></li>
 <li><a routerLink="/activity">Activity</a></li>
                         <li><a routerLink="/costcenter">Cost Center</a></li>
+                      <li><a routerLink="/payroll-paytype">Payments</a></li>
                         <li><a routerLink="/designation">Designations</a></li>
                         <li><a routerLink="/departments">Departmental Setup</a></li>
                         <li><a routerLink="/HrReason">Hr Reason</a></li>
